--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Reports/Views/Shared/Index.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Reports/Views/Shared/Index.cshtml
@@ -9,28 +9,28 @@
     <div class="pull-left">
         <ul class="secnav">
              <li>
-                <a id="btnPreviewReport" class="btn" style="display: none" data-preview="true">@Translation.Get("Kör")</a>
+                <a id="btnPreviewReport" class="btn" style="display: none" data-preview="true">@Translation.GetCoreTextTranslation("Kör")</a>
             </li>
             <li>
-                <input type="button" id="showReport" class="btn" style="display: none" disabled="true" value="@Translation.Get("Visa")" />
+                <input type="button" id="showReport" class="btn" style="display: none" disabled="true" value="@Translation.GetCoreTextTranslation("Visa")" />
             </li>
             <li>
-                <a id="printReport" class="btn" style="display: none">@Translation.Get("Skriv ut")</a>
+                <a id="printReport" class="btn" style="display: none">@Translation.GetCoreTextTranslation("Skriv ut")</a>
             </li>
             <li>
-                <input type="button" id="excelReport" class="btn" style="display: none" disabled="true" data-excel="true" value="@Translation.Get("Export to Excel")"/>
+                <input type="button" id="excelReport" class="btn" style="display: none" disabled="true" data-excel="true" value="@Translation.GetCoreTextTranslation("Export to Excel")"/>
             </li>
             <li>
-                <a id="btnShowReport" class="btn">@Translation.Get("Visa")</a>                
+                <a id="btnShowReport" class="btn">@Translation.GetCoreTextTranslation("Visa")</a>                
             </li>
             <li>
-                <a id="btnSaveFilter" class="btn" style="display: none">@Translation.Get("Spara")</a>
+                <a id="btnSaveFilter" class="btn" style="display: none">@Translation.GetCoreTextTranslation("Spara")</a>
             </li>
             <li>
-                <a id="btnSaveAsFilter" class="btn">@Translation.Get("Spara som")</a>
+                <a id="btnSaveAsFilter" class="btn">@Translation.GetCoreTextTranslation("Spara som")</a>
             </li>
             <li>
-                <a id="btnDeleteFavorite" class="btn" style="display: none">@Translation.Get("Ta bort")</a>
+                <a id="btnDeleteFavorite" class="btn" style="display: none">@Translation.GetCoreTextTranslation("Ta bort")</a>
             </li>
             <li>
                 <img id="showReportLoader" src="@Url.Content("~/Content/icons/ajax-loader.gif")" style="display: none;" />
@@ -42,7 +42,7 @@
     <div class="container">
         <ul class="nav nav-tabs">
             <li class="active">
-                <a id="tab_reportViewer" href="#fragment-2">@Translation.Get("Rapporter")</a>
+                <a id="tab_reportViewer" href="#fragment-2">@Translation.GetCoreTextTranslation("Rapporter")</a>
             </li>
         </ul>
         <div class="tab-content overflow-visible">
