--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Contracts/_ContractsIndexRows.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Contracts/_ContractsIndexRows.cshtml
@@ -172,7 +172,7 @@
                     }
                 }
 
-                if (s.ContractField == EnumContractFieldSettings.FollowUpField)
+                if (s.ContractField == EnumContractFieldSettings.FollowUp)
                 {
                     if (row.FollowUpInterval == 0)
                     {
@@ -200,7 +200,7 @@
                     }
                 }
 
-                if (s.ContractField == EnumContractFieldSettings.ResponsibleFollowUpField)
+                if (s.ContractField == EnumContractFieldSettings.ResponsibleFollowUp)
                 {
                     if (row.FollowUpResponsibleUser != null)
                     {
