#71320 - Disable in Extended case by applicationtype Selfservice don't work as it used to

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Case/ExtendedCase.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Case/ExtendedCase.cshtml
@@ -133,7 +133,7 @@
         userRole: '@(Model.UserRole)',
         caseStatus: '@(Model.StateSecondaryId)',
         currentUser: '@(Model.CurrentUser)',
-        applicationType: '@Model.ApplicationType.ToStringValue()',
+        applicationType: '@ViewBag.ApplicationType',
         lastError: '@Html.Raw(lastErrorMessage)'
     };
 
