--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/CaseSolution/Edit.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/CaseSolution/Edit.cshtml
@@ -1,61 +1,39 @@
-﻿@using System.Web.UI.WebControls
-@using DH.Helpdesk.Web.Infrastructure
-@model DH.Helpdesk.Web.Models.CaseSolution.CaseSolutionInputViewModel
-
-
-
+﻿@model DH.Helpdesk.Web.Models.CaseSolution.CaseSolutionInputViewModel
 
 @{
     ViewBag.Title = "Edit";
-}
-
-@{
     int backPageId = ViewBag.PageId;
-}
-
-
-
-@{
     string SelectedValues = ViewBag.selectedValues;
 }
-
-
 
 @using (Html.BeginForm("Edit", "casesolution", new { id = Model.CaseSolution.Id }, FormMethod.Post, new { id = "target" }))
 {
     @Html.Hidden("PageId", backPageId)
-
-
     @Html.Hidden("selectedValues", SelectedValues)
     
     <div class="secnavs fixed">
         <div class="pull-left">
             <ul class="secnav">
-
-                @*<li>@Html.ActionLink(Translation.Get("Spara", Enums.TranslationSource.TextTranslation), "edit", new { id = Model.CaseSolution.Id }, new { onclick = "$('#target').submit();return false;", @class = "btn" })</li>*@
-                <li><a class="btn save" id="SaveCaseSolution">@Translation.Get("Spara", Enums.TranslationSource.TextTranslation)</a></li>
-                <li>@Html.ActionLink(Translation.Get("Ta bort", Enums.TranslationSource.TextTranslation), 
-                   "delete", new { id = @Model.CaseSolution.Id, pageId = backPageId }, 
-                   new { @class = "btn deleteDialog", deleteDialogText = Translation.Get("Är du säker på att du vill ta bort aktuell post", Enums.TranslationSource.TextTranslation) + "?" }) 
-                </li>
-                
-
-                <li><a class="btn save" id="CopyCaseSolution">@Translation.Get("Kopiera", Enums.TranslationSource.TextTranslation)</a></li>
-
-              @*  <li>@Html.ActionLink(Translation.Get("Kopiera", Enums.TranslationSource.TextTranslation), "copy", new { id = "CopyCaseSolution" }, new { @class = "btn deleteDialog", deleteDialogText = Translation.Get("Är du säker på att du vill kopiera aktuell post", Enums.TranslationSource.TextTranslation) + "?" }) </li>*@
-
-
+                @*<li>@Html.ActionLink(Translation.GetCoreTextTranslation("Spara"), "edit", new { id = Model.CaseSolution.Id }, new { onclick = "$('#target').submit();return false;", @class = "btn" })</li>*@
+                <li><a class="btn save" id="SaveCaseSolution">@Translation.GetCoreTextTranslation("Spara")</a></li>
                 <li>
-                    @switch (backPageId)
-                    {
-                        case 0:
-                            @Html.ActionLink(Translation.Get("Avbryt", Enums.TranslationSource.TextTranslation), "index", null, new { @class = "btn" })
-                            break;
+                    @Html.ActionLink(Translation.GetCoreTextTranslation("Ta bort"), "delete",
+                        new { id = @Model.CaseSolution.Id, pageId = backPageId },
+                        new { @class = "btn deleteDialog", deleteDialogText = Translation.GetCoreTextTranslation("Är du säker på att du vill ta bort aktuell post") + "?" })
+                </li>
+                <li><a class="btn save" id="CopyCaseSolution">@Translation.GetCoreTextTranslation("Kopiera")</a></li>
+                @*<li>@Html.ActionLink(Translation.GetCoreTextTranslation("Kopiera"), "copy", new { id = "CopyCaseSolution" }, new { @class = "btn deleteDialog", deleteDialogText = Translation.GetCoreTextTranslation("Är du säker på att du vill kopiera aktuell post") + "?" }) </li>*@
+                <li>
+                @switch (backPageId)
+                {
+                    case 0:
+                        @Html.ActionLink(Translation.GetCoreTextTranslation("Avbryt"), "index", null, new { @class = "btn" })
+                        break;
 
-                        case 1:
-                            @Html.ActionLink(Translation.Get("Avbryt", Enums.TranslationSource.TextTranslation), "index", "Cases", null, new { @class = "btn" })
-                            break;
-                    }
+                    case 1:
+                        @Html.ActionLink(Translation.GetCoreTextTranslation("Avbryt"), "index", "Cases", null, new { @class = "btn" })
+                        break;
+                }
                 </li>
             </ul>
         </div>
